--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+cmake-build-debug*
+.idea
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -9,7 +11,5 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-build/
-libnativelib.so
-libnative.so
-libhook.so
+.DS_Store
+*.so
