chore: Fix build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.26)
-project(native CXX)
+project(native C CXX)
 
 set(CMAKE_C_STANDARD 23)
 set(CMAKE_CXX_STANDARD 26)
@@ -8,7 +8,7 @@ include_directories("include")
 
 link_directories("lib")
 
-add_library(native SHARED src/hook.cpp src/native.cpp)
+add_library(native SHARED src/hook.c src/native.cpp)
 
 target_link_libraries(native "libfunchook.a"
                              "libZydis.a")
