--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,12 @@
 cmake_minimum_required(VERSION 3.26)
 
-set(CMAKE_C_COMPILER clang)
-set(CMAKE_C_STANDARD 23)
-set(CMAKE_CXX_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_CXX_STANDARD 26)
 
-project(native C CXX)
+project(native CXX)
 
 include_directories("include")
 
 link_directories("lib")
 
-add_library(native SHARED src/hook.c src/native.cpp)
-
-target_link_libraries(native "libfunchook.a"
-                             "libZydis.a")
+add_library(native SHARED src/native.cpp)
