--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           prerelease: ${{ github.event.inputs.prerelease }}
           tag: ${{ github.event.inputs.version }}
-          artifacts: build/libnative.so
+          artifacts: build/liblayer.so
