--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 3.26)
 
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_COMPILER clang++)
-set(CMAKE_CXX_STANDARD 26)
 
-project(native CXX)
+project(layer)
 
-include_directories("include")
-
-link_directories("lib")
-
-add_library(native SHARED src/native.cpp)
+add_library(layer SHARED src/layer.cpp)
