--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.26)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_COMPILER clang++)
 
-project(layer)
+project(export)
 
-add_library(layer SHARED src/layer.cpp)
+add_library(export SHARED src/export.cpp)
