--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,20 +16,21 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v3.5.3
 
-      - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      - name: Configure MSBuild
+        uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        working-directory: ${{ env.GITHUB_WORKSPACE }}
+        run: msbuild /m /p:Configuration=${{ env.BUILD_TYPE }}
 
       - name: Create New Release
         uses: ncipollo/release-action@v1.12.0
         with:
           prerelease: ${{ github.event.inputs.prerelease }}
           tag: ${{ github.event.inputs.version }}
-          artifacts: build/libexport.so
+          artifacts: x64/Release/Export.dll
